--- a/homepage.html
+++ b/homepage.html
@@ -1,9 +1,10 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>tutor</title>
 </head>
 <body>
+	<h1>Study Center</h1>
 
 </body>
 </html>
