--- a/mathPage.html
+++ b/mathPage.html
@@ -1,8 +1,10 @@
 <html>
 <head>
-	<title></title>
+	<title>mathTutorial</title>
+	<link rel="stylesheet" type="text/css" href="./mathStyle.css">
 </head>
 <body>
+	<h1 class="header" style="text-align:center">Math tutorial</h1>
 
 </body>
 </html>
