added courses in maths page

--- a/mathPage.html
+++ b/mathPage.html
@@ -1,10 +1,29 @@
 <html>
 <head>
 	<title>mathTutorial</title>
-	<link rel="stylesheet" type="text/css" href="./mathStyle.css">
+	<link rel="stylesheet" type="text/css" href="./math.css">
 </head>
 <body>
-	<h1 class="header" style="text-align:center">Math tutorial</h1>
+	<h1 class="topic">Math tutorial</h1>
+	<div class="leftRow">
+		<h2>Courses</h2>
+		<p>Basic maths</p>
+		<p>Algebra</p>
+		<p>Mensuration</p>
+		<p>Arithmetic</p>
+		<p>Coordinate system</p>
+		<p>Trigonometry</p>
+	</div>
+	<div class="middleRow">
+		<div class="image">
+			<img src="bm.jpg" width="200px" height="250px">
+			<img src="al.jpg" width="200px" height="250px">
+			<img src="m.jpg" width="200px" height="250px">
+			<img src="ar.jpg" width="200px" height="250px">
+			<img src="cg.jpg" width="200px" height="250px">
+			<img src="t.jpg" width="200px" height="250px">
+		</div>
+	</div>
 
 </body>
 </html>
