--- a/homepage.html
+++ b/homepage.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>tutor</title>
+	<title></title>
+	<link rel="stylesheet" type="text/css" href="homepage.css">
 </head>
 <body>
-	<h1>Study Center</h1>
+	<header>ddskf</header>
+	<header class ="sec">fdgajs</header>
+	<h1>Introduction</h1>
+	<p>akgdad ckjasf fckshdf klfhw eflkwhfhgsf fweiufgk fkwgef kJSGF DSGKFwugf wfwukgf jwREFGWG JWRFW fjqrgf JEYFW<br>
+	afslghv glhdfdhb laekfg fljrgb flkheargb flhrebg WEIHF ERGlfdz glagha fkwrhjg wFKWHG <br>
+	akgdad ckjasf fckshdf klfhw eflkwhfhgsf fweiufgk fkwgef kJSGF DSGKFwugf wfwukgf jwREFGWG JWRFW fjqrgf JEYFW<br>
+	afslghv glhdfdhb laekfg fljrgb flkheargb flhrebg WEIHF ERGlfdz glagha fkwrhjg wFKWHG <br>
+	akgdad ckjasf fckshdf klfhw eflkwhfhgsf fweiufgk fkwgef kJSGF DSGKFwugf wfwukgf jwREFGWG JWRFW fjqrgf JEYFW<br>
+	afslghv glhdfdhb laekfg fljrgb flkheargb flhrebg WEIHF ERGlfdz glagha fkwrhjg wFKWHG <br>
+	akgdad ckjasf fckshdf klfhw eflkwhfhgsf fweiufgk fkwgef kJSGF DSGKFwugf wfwukgf jwREFGWG JWRFW fjqrgf JEYFW<br>
+	afslghv glhdfdhb laekfg fljrgb flkheargb flhrebg WEIHF ERGlfdz glagha fkwrhjg wFKWHG <br></p>
+	<a href="mathPage.html" target="blank"><img src="math.png"></img></a>
 
 </body>
 </html>
