footer is added

--- a/homepage.html
+++ b/homepage.html
@@ -8,15 +8,20 @@
 	<header>ddskf</header>
 	<header class ="sec">fdgajs</header>
 	<h1>Introduction</h1>
-	<p>akgdad ckjasf fckshdf klfhw eflkwhfhgsf fweiufgk fkwgef kJSGF DSGKFwugf wfwukgf jwREFGWG JWRFW fjqrgf JEYFW<br>
-	afslghv glhdfdhb laekfg fljrgb flkheargb flhrebg WEIHF ERGlfdz glagha fkwrhjg wFKWHG <br>
-	akgdad ckjasf fckshdf klfhw eflkwhfhgsf fweiufgk fkwgef kJSGF DSGKFwugf wfwukgf jwREFGWG JWRFW fjqrgf JEYFW<br>
-	afslghv glhdfdhb laekfg fljrgb flkheargb flhrebg WEIHF ERGlfdz glagha fkwrhjg wFKWHG <br>
-	akgdad ckjasf fckshdf klfhw eflkwhfhgsf fweiufgk fkwgef kJSGF DSGKFwugf wfwukgf jwREFGWG JWRFW fjqrgf JEYFW<br>
-	afslghv glhdfdhb laekfg fljrgb flkheargb flhrebg WEIHF ERGlfdz glagha fkwrhjg wFKWHG <br>
-	akgdad ckjasf fckshdf klfhw eflkwhfhgsf fweiufgk fkwgef kJSGF DSGKFwugf wfwukgf jwREFGWG JWRFW fjqrgf JEYFW<br>
-	afslghv glhdfdhb laekfg fljrgb flkheargb flhrebg WEIHF ERGlfdz glagha fkwrhjg wFKWHG <br></p>
-	<a href="mathPage.html" target="blank"><img src="math.png"></img></a>
+	<div id="middle">
+		<p>akgdad ckjasf fckshdf klfhw eflkwhfhgsf fweiufgk fkwgef kJSGF DSGKFwugf wfwukgf jwREFGWG JWRFW fjqrgf JEYFW<br>
+		afslghv glhdfdhb laekfg fljrgb flkheargb flhrebg WEIHF ERGlfdz glagha fkwrhjg wFKWHG <br>
+		akgdad ckjasf fckshdf klfhw eflkwhfhgsf fweiufgk fkwgef kJSGF DSGKFwugf wfwukgf jwREFGWG JWRFW fjqrgf JEYFW<br>
+		afslghv glhdfdhb laekfg fljrgb flkheargb flhrebg WEIHF ERGlfdz glagha fkwrhjg wFKWHG <br>
+		akgdad ckjasf fckshdf klfhw eflkwhfhgsf fweiufgk fkwgef kJSGF DSGKFwugf wfwukgf jwREFGWG JWRFW fjqrgf JEYFW<br>
+		afslghv glhdfdhb laekfg fljrgb flkheargb flhrebg WEIHF ERGlfdz glagha fkwrhjg wFKWHG <br>
+		akgdad ckjasf fckshdf klfhw eflkwhfhgsf fweiufgk fkwgef kJSGF DSGKFwugf wfwukgf jwREFGWG JWRFW fjqrgf JEYFW<br>
+		afslghv glhdfdhb laekfg fljrgb flkheargb flhrebg WEIHF ERGlfdz glagha fkwrhjg wFKWHG <br></p>
+		<a href="mathPage.html" target="_blank" class="image"><img src="math.jpg"></img></a>
+		<a href="phyPage.html" target="_blank" class="image"><img src="physics.jpg"></img></a>
+		<a href="chePage.html" target="_blank" class="image"><img src="chemistry.jpg"></img></a>
+	</div>
+	<footer>&copyright 2015</footer>
 
 </body>
 </html>
