Edited mathematics page and include basic maths

--- a/mathPage.html
+++ b/mathPage.html
@@ -3,26 +3,27 @@
 	<title>mathTutorial</title>
 	<link rel="stylesheet" type="text/css" href="./math.css">
 </head>
-<body>
-	<h1 class="topic">Math tutorial</h1>
+<body background="back.png" margin="0px">
+	<h1 class="topic">Mathemaya</h1>
 	<div class="leftRow">
 		<h2>Courses</h2>
 		<p>Basic maths</p>
 		<p>Algebra</p>
+		<p>Geometry</p>
 		<p>Mensuration</p>
 		<p>Arithmetic</p>
 		<p>Coordinate system</p>
 		<p>Trigonometry</p>
 	</div>
-	<div class="middleRow">
-		<div class="image">
-			<img src="bm.jpg" width="200px" height="250px">
-			<img src="al.jpg" width="200px" height="250px">
-			<img src="m.jpg" width="200px" height="250px">
-			<img src="ar.jpg" width="200px" height="250px">
-			<img src="cg.jpg" width="200px" height="250px">
-			<img src="t.jpg" width="200px" height="250px">
-		</div>
+	<div id="middleRow">
+		<a href="basic.html"><img src="bm.jpg" width="200px" height="250px" class="image"></a>
+		<a href="algebra.html"><img src="al.jpg" width="200px" height="250px" class="image"></a>
+		<a href="geometry.html"><img src="g.jpg" width="200px" height="250px" class="image"></a>
+		<a href="mensuration.html"><img src="m.jpg" width="200px" height="250px" class="image"></a>
+		<a href="arithmetic.html"><img src="ar.jpg" width="200px" height="250px" class="image"></a>
+		<a href="coordinate.html"><img src="cg.jpg" width="200px" height="250px" class="image"></a>
+		<a href="trigonometry.html"><img src="t.jpg" width="200px" height="250px" class="image"></a>
+		<a href="calculus.html"><img src="c.jpg" width="200px" height="250px" class="image"></a>
 	</div>
 
 </body>
