basic maths skill updated

--- a/basic.html
+++ b/basic.html
@@ -44,6 +44,7 @@
 		<table border="1">
 			<th>Sub-classes of integers</th>
 			<tr>
+				<td>Even and odd numbers</td>
 				<td></td>
 			</tr>
 		</table>
