homepage background is changed

--- a/homepage.html
+++ b/homepage.html
@@ -4,9 +4,11 @@
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="homepage.css">
 </head>
-<body>
-	<header>ddskf</header>
-	<header class ="sec">fdgajs</header>
+<body background="background.jpg">
+	<header>
+			<a href="http://facebook.com" target="_blank" class="image"><img src="fbicon.jpg" height="60px" width="60px" align="right" margin-right="56px" ></img></a>
+			<img src="sitelogo.png" align="left">
+	</header>
 	<h1>Introduction</h1>
 	<div id="middle">
 		<p>akgdad ckjasf fckshdf klfhw eflkwhfhgsf fweiufgk fkwgef kJSGF DSGKFwugf wfwukgf jwREFGWG JWRFW fjqrgf JEYFW<br>
