physics page created

--- a/homepage.html
+++ b/homepage.html
@@ -19,9 +19,9 @@
 		afslghv glhdfdhb laekfg fljrgb flkheargb flhrebg WEIHF ERGlfdz glagha fkwrhjg wFKWHG <br>
 		akgdad ckjasf fckshdf klfhw eflkwhfhgsf fweiufgk fkwgef kJSGF DSGKFwugf wfwukgf jwREFGWG JWRFW fjqrgf JEYFW<br>
 		afslghv glhdfdhb laekfg fljrgb flkheargb flhrebg WEIHF ERGlfdz glagha fkwrhjg wFKWHG <br></p>
-		<a href="mathPage.html" target="_blank" class="image"><img src="math.jpg"></img></a>
-		<a href="phyPage.html" target="_blank" class="image"><img src="physics.jpg"></img></a>
-		<a href="chePage.html" target="_blank" class="image"><img src="chemistry.jpg"></img></a>
+		<a href="mathPage.html" target="_blank"><img src="math.jpg" class="image" ></img></a>
+		<a href="phyPage.html" target="_blank" ><img src="physics.jpg" class="image"></img></a>
+		<a href="chePage.html" target="_blank" ><img src="chemistry.jpg" class="image"></img></a>
 	</div>
 	<footer>&copyright 2015</footer>
 
