--- a/basic.html
+++ b/basic.html
@@ -40,16 +40,80 @@
 				<td>Complex</td>
 				<td>a + bi where a and b are real numbers and i is the square root of −1</td>
 			</tr>
-		</table><br>
+		</table><br><br>
 		<table border="1">
 			<th>Sub-classes of integers</th>
 			<tr>
 				<td>Even and odd numbers</td>
-				<td></td>
+				<td>EVEN : 2,4,6,...<br>ODD : 1,3,5,...</td>
 			</tr>
-		</table>
-
-		<p></p>
+			<tr>
+				<td>Prime number</td>
+				<td>It is an integer greater than 1 that is not the product of two smaller positive integers. </td>
+			</tr>
+		</table><br><br>
+		<div id="box">
+			<h1>Addition</h1>
+			<img src="3+1.png" alt="add two numbers">
+			<p>Once you look at the problem visually, you can count and see that there are 5 people.</p><br>
+			<img src="30+21.png" alt="adding large numbers">
+			<p>Now try to count total number of girls in each stack.</p><br>
+			<h3>So turns out these problems can be written in the following form :</h3>
+			<ol>
+				<li><big>3 + 2 = 5</big></li>
+				<li><big>30 + 21 = 51</big></li>
+			</ol><br>
+			<h3>Now try out some of the questions</h3>
+			<ol>
+				<li><big>20 + 43 = ?</big></li>
+				<li><big>132 + 113 = ?</big></li>
+				<li><big>132 + 413 = ?</big></li>
+				<li><big>136 + 415 = ?</big></li>
+				<li><big>936 + 415 = ?</big></li>
+			</ol>
+		</div><br>
+		<div id="box">
+			<h1>Subtraction</h1>
+			<img src="9-6.png" alt="sub two numbers">
+			<p>If I have 9 apples and my friend took 6 apples from me than I will have 3 apples remaining.</p><br>
+			<img src="30-21.png" alt="sub large numbers">
+			<p>I have 30 apples in total and if I eat 21 apples(light shaded) then I will have 9 apples(dark shaded) reamining.</p><br>
+			<h3>In mathematical form :</h3>
+			<ol>
+				<li><big>9 - 6 = 3</big></li>
+				<li><big>30 - 21 = 9</big></li>
+			</ol><br>
+			<h3>Now try out some of the questions</h3>
+			<ol>
+				<li><big>52 - 43 = ?</big></li>
+				<li><big>132 - 113 = ?</big></li>
+				<li><big>332 - 313 = ?</big></li>
+				<li><big>531 - 415 = ?</big></li>
+				<li><big>936 - 415 = ?</big></li>
+			</ol>
+		</div>
+		<div>
+			<div id="box">
+			<h1>Multiplication</h1>
+			<img src="5*2.png" alt="sub two numbers">
+			<pre>For multiplication I can make a table(right side of the image) and 
+I can match one number with the row and second with the column</pre><br>
+			<img src="14*2.png" alt="sub large numbers">
+			<p>I have 30 apples in total and if I eat 21 apples(light shaded) then I will have 9 apples(dark shaded) reamining.</p><br>
+			<h3>In mathematical form :</h3>
+			<ol>
+				<li><big>9 - 6 = 3</big></li>
+				<li><big>30 - 21 = 9</big></li>
+			</ol><br>
+			<h3>Now try out some of the questions</h3>
+			<ol>
+				<li><big>52 - 43 = ?</big></li>
+				<li><big>132 - 113 = ?</big></li>
+				<li><big>332 - 313 = ?</big></li>
+				<li><big>531 - 415 = ?</big></li>
+				<li><big>936 - 415 = ?</big></li>
+			</ol>
+		</div>
 	</div>
 </body>
 </html>
