renamed homepage to iClasses

--- a/iClasses.html
+++ b/iClasses.html
@@ -11,17 +11,14 @@
 	</header>
 	<h1>Introduction</h1>
 	<div id="middle">
-		<p>akgdad ckjasf fckshdf klfhw eflkwhfhgsf fweiufgk fkwgef kJSGF DSGKFwugf wfwukgf jwREFGWG JWRFW fjqrgf JEYFW<br>
-		afslghv glhdfdhb laekfg fljrgb flkheargb flhrebg WEIHF ERGlfdz glagha fkwrhjg wFKWHG <br>
-		akgdad ckjasf fckshdf klfhw eflkwhfhgsf fweiufgk fkwgef kJSGF DSGKFwugf wfwukgf jwREFGWG JWRFW fjqrgf JEYFW<br>
-		afslghv glhdfdhb laekfg fljrgb flkheargb flhrebg WEIHF ERGlfdz glagha fkwrhjg wFKWHG <br>
-		akgdad ckjasf fckshdf klfhw eflkwhfhgsf fweiufgk fkwgef kJSGF DSGKFwugf wfwukgf jwREFGWG JWRFW fjqrgf JEYFW<br>
-		afslghv glhdfdhb laekfg fljrgb flkheargb flhrebg WEIHF ERGlfdz glagha fkwrhjg wFKWHG <br>
-		akgdad ckjasf fckshdf klfhw eflkwhfhgsf fweiufgk fkwgef kJSGF DSGKFwugf wfwukgf jwREFGWG JWRFW fjqrgf JEYFW<br>
-		afslghv glhdfdhb laekfg fljrgb flkheargb flhrebg WEIHF ERGlfdz glagha fkwrhjg wFKWHG <br></p>
-		<a href="mathPage.html" target="_blank"><img src="math.jpg" class="image" ></img></a>
-		<a href="phyPage.html" target="_blank" ><img src="physics.jpg" class="image"></img></a>
-		<a href="chePage.html" target="_blank" ><img src="chemistry.jpg" class="image"></img></a>
+		<pre>Welcome to I-Classes here you can select your interest of studies. Each tutorial can be used at your
+own pace. This tutorial will descreibe you all the topics and mathematical logics from the basic so that
+there will not be any confusion in the following advance level of studies. This tutorial contain questions
+that you can try after undeerstandind the basic concepts. 
+So have a look at the following tutorials :</pre><br><br>
+		<a href="mathPage.html"><img src="math.jpg" class="image" ></img></a>
+		<a href="phyPage.html"><img src="physics.jpg" class="image"></img></a>
+		<a href="chePage.html"><img src="chemistry.jpg" class="image"></img></a>
 	</div>
 	<footer>&copyright 2015</footer>
 
