footer of homepage is changed and basic maths file is also modified

--- a/basic.html
+++ b/basic.html
@@ -96,23 +96,19 @@
 			<div id="box">
 			<h1>Multiplication</h1>
 			<img src="5*2.png" alt="sub two numbers">
-			<pre>For multiplication I can make a table(right side of the image) and 
-I can match one number with the row and second with the column</pre><br>
+			<p>For multiplication I can make a table(right side of the image) and I can match first number with the column and second <br>with the row.</p><br>
 			<img src="14*2.png" alt="sub large numbers">
-			<p>I have 30 apples in total and if I eat 21 apples(light shaded) then I will have 9 apples(dark shaded) reamining.</p><br>
-			<h3>In mathematical form :</h3>
-			<ol>
-				<li><big>9 - 6 = 3</big></li>
-				<li><big>30 - 21 = 9</big></li>
-			</ol><br>
+			<p>In this example I can add 14 two times to get the answer so in multiplcation we can do this task
+				by making a <br>table and seeing the corresponding row and column in the table. </p><br>
 			<h3>Now try out some of the questions</h3>
 			<ol>
-				<li><big>52 - 43 = ?</big></li>
-				<li><big>132 - 113 = ?</big></li>
-				<li><big>332 - 313 = ?</big></li>
-				<li><big>531 - 415 = ?</big></li>
-				<li><big>936 - 415 = ?</big></li>
+				<li><big>52 * 4 = ?</big></li>
+				<li><big>132 * 3 = ?</big></li>
+				<li><big>332 * 2 = ?</big></li>
+				<li><big>531 * 4 = ?</big></li>
+				<li><big>936 * 15 = ?</big></li>
 			</ol>
+			<img src="mulTable.gif" id="mulTable">
 		</div>
 	</div>
 </body>
