--- a/iClasses.html
+++ b/iClasses.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>I-Classes</title>
 	<link rel="stylesheet" type="text/css" href="homepage.css">
 </head>
 <body background="background.jpg">
 	<header>
-			<a href="http://facebook.com" target="_blank" class="image"><img src="fbicon.jpg" height="60px" width="60px" align="right" margin-right="56px" ></img></a>
-			<img src="sitelogo.png" align="left">
+			<img src="sitelogo.png">
 	</header>
 	<h1>Introduction</h1>
 	<div id="middle">
@@ -20,7 +19,10 @@ So have a look at the following tutorials :</pre><br><br>
 		<a href="phyPage.html"><img src="physics.jpg" class="image"></img></a>
 		<a href="chePage.html"><img src="chemistry.jpg" class="image"></img></a>
 	</div>
-	<footer>&copyright 2015</footer>
+	<footer>
+		<h2>Follow us on :</h2>
+		<a href="http://facebook.com" class="image"><img src="fbicon.jpg" height="60px" width="60px"></img></a>
+	</footer>
 
 </body>
 </html>
