--- a/basic.html
+++ b/basic.html
@@ -5,13 +5,8 @@
 </head>
 <body>
 	<header>
-		<h1>Basic Mathematics Skills</h1>
+		<h1 class="topic">Basic Mathematics Skills <a href="./iClasses.html"><img src="homepage.png" align="right"></a></h1>
 		<img src="maths.png" class="image" alt="Basic maths">
-		<!-- <form>
-            <input type="text" placeholder="Search..." required>
-			<input type="button" value="Search">
-		</form> -->
-
 	</header>
 	<div id="nav">
 		<h1>Contents</h1>
