--- a/homepage.html
+++ b/homepage.html
@@ -6,7 +6,7 @@
 </head>
 <body background="background.jpg">
 	<header>
-			<a href="http://facebook.com" target="_blank" class="image"><img src="fbicon.jpg" height="60px" width="60px" align="right" margin-right="56px" ></img></a>
+			<a href="https://www.facebook.com/E-learning-867307250031088/" target="_blank" class="image"><img src="fbicon.jpg" height="60px" width="60px" align="right" margin-right="56px" ></img></a>
 			<img src="sitelogo.png" align="left">
 	</header>
 	<h1>Introduction</h1>
