--- a/iClasses.html
+++ b/iClasses.html
@@ -6,10 +6,8 @@
 </head>
 <body background="background.jpg">
 	<header>
-			<a href="http://facebook.com" target="_blank" class="image"><img src="fbicon.jpg" height="60px" width="60px" align="right" margin-right="56px" ></img></a>
-			<img src="sitelogo.png" align="left">
 	</header>
-	<h1>Introduction</h1>
+			<h1>Introduction</h1>
 	<div id="middle">
 		<pre>Welcome to I-Classes here you can select your interest of studies. Each tutorial can be used at your
 own pace. This tutorial will descreibe you all the topics and mathematical logics from the basic so that
@@ -20,7 +18,10 @@ So have a look at the following tutorials :</pre><br><br>
 		<a href="phyPage.html"><img src="physics.jpg" class="image"></img></a>
 		<a href="chePage.html"><img src="chemistry.jpg" class="image"></img></a>
 	</div>
-	<footer>&copyright 2015</footer>
+	<div class="logo">
+		<a href="https://www.facebook.com/E-learning-867307250031088/" target="_blank"></a><img src="fblogo.jpeg" align="right">
+	</div>
+	<footer><strong>copyright@2015</strong></footer>
 
 </body>
 </html>
