--- a/mathPage.html
+++ b/mathPage.html
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" type="text/css" href="./math.css">
 </head>
 <body background="back.png" margin="0px">
-	<h1 class="topic">Mathemaya</h1>
+	<h1 class="topic">Mathemaya<a href="./iClasses.html"><img src="homepage.png" align="right"></a></h1>
 	<div class="leftRow">
 		<h2>Courses</h2>
 		<p>Basic maths</p>
