Header of math and physics are slided a little above

--- a/phyPage.html
+++ b/phyPage.html
@@ -1,20 +1,20 @@
-<!DOCTYPE html>
 <html>
 <head>
 	<title>physics Tutorials</title>
 	<link rel="stylesheet" type="text/css" href="./math.css">
 </head>
 <body background="back.png">
-<h1 class="topic">Physics <a href="./iClasses.html"><img src="homepage.png" align="right"></a></h1>
-<div class="leftRow">
-	<h2>Courses</h2>
-	<p>Fundamental Concepts</p>
-	<p>Mechanics</p>
-	<p>Fluid Mechanics</p>
-	<p>Thermodynamics</p>
-	<p>Electricity and Magnetism</p>
-	<p>Oscillations and Waves</p>							
-</div>
+	<h1 class="topic">Physics <a href="./iClasses.html"><img src="homepage.png" alt="home" id="image"></a></h1>
+	
+	<div class="leftRow">
+		<h2>Courses</h2>
+		<p>Fundamental Concepts</p>
+		<p>Mechanics</p>
+		<p>Fluid Mechanics</p>
+		<p>Thermodynamics</p>
+		<p>Electricity and Magnetism</p>
+		<p>Oscillations and Waves</p>							
+	</div>
 	<div id="middleRow">
 		<a href="basic.html"><img src="fandamental.jpg" width="200px" height="250px" class="image"></a>
 		<a href="algebra.html"><img src="mechanics.jpg" width="200px" height="250px" class="image"></a>
@@ -26,7 +26,6 @@
 	<div class="logo">
 		<a href="https://www.facebook.com/E-learning-867307250031088/" target="_blank"><img src="fblogo.jpeg" align="right"></a>
 	</div>
->>>>>>> 1e74f34bf74fe7724e9ed4c4cd55e9560a4ac2e7
 
 </body>
 </html>
