chemistry content added courses modified

--- a/mathPage.html
+++ b/mathPage.html
@@ -7,13 +7,13 @@
 	<h1 class="topic">Mathemaya<a href="./iClasses.html"><img src="homepage.png" align="right"></a></h1>
 	<div class="leftRow">
 		<h2>Courses</h2>
-		<p>Basic maths</p>
-		<p>Algebra</p>
-		<p>Geometry</p>
-		<p>Mensuration</p>
-		<p>Arithmetic</p>
-		<p>Coordinate system</p>
-		<p>Trigonometry</p>
+		<li>Basic maths</li>
+		<li>Algebra</li>
+		<li>Geometry</li>
+		<li>Mensuration</li>
+		<li>Arithmetic</li>
+		<li>Coordinate system</li>
+		<li>Trigonometry</li>
 	</div>
 	<div id="middleRow">
 		<a href="basic.html"><img src="bm.jpg" width="200px" height="250px" class="image"></a>
