--- a/phyPage.html
+++ b/phyPage.html
@@ -8,12 +8,15 @@
 <h1 class="topic">Physics <a href="./iClasses.html"><img src="homepage.png" align="right"></a></h1>
 <div class="leftRow">
 	<h2>Courses</h2>
-	<p>Fundamental Concepts</p>
-	<p>Mechanics</p>
-	<p>Fluid Mechanics</p>
-	<p>Thermodynamics</p>
-	<p>Electricity and Magnetism</p>
-	<p>Oscillations and Waves</p>							
+	<ul>
+		<li>Fundamental Concepts</li>
+		<li>Mechanics</li>
+		<li>Fluid Mechanics</li>
+		<li>Thermodynamics</li>
+		<li>Electricity and Magnetism</li>
+		<li>Oscillations and Waves</li>							
+	</ul>
+	
 </div>
 	<div id="middleRow">
 		<a href="basic.html"><img src="fandamental.jpg" width="200px" height="250px" class="image"></a>
@@ -26,7 +29,7 @@
 	<div class="logo">
 		<a href="https://www.facebook.com/E-learning-867307250031088/" target="_blank"><img src="fblogo.jpeg" align="right"></a>
 	</div>
->>>>>>> 1e74f34bf74fe7724e9ed4c4cd55e9560a4ac2e7
+
 
 </body>
 </html>
