--- a/chePage.html
+++ b/chePage.html
@@ -8,20 +8,23 @@
 <h1 class="topic">Chemistry <a href="./iClasses.html"><img src="homepage.png" align="right"></a></h1>
 <div class="leftRow">
 	<h2>Courses</h2>
-	<p>Fundamental Concepts</p>
-	<p>Mechanics</p>
-	<p>Fluid Mechanics</p>
-	<p>Thermodynamics</p>
-	<p>Electricity and Magnetism</p>
-	<p>Oscillations and Waves</p>							
+	<li>Measurement</li>
+	<li>Gases</li>
+	<li>Soluton</li>
+	<li>Elements Compound and Mixture</li>
+	<li>Acid and Base</li>
+	<li>Chemical Kinetics</li>
+	<li>Structure of Atom</li>
+	
 </div>
 	<div id="middleRow">
-		<a href="basic.html"><img src="fandamental.jpg" width="200px" height="250px" class="image"></a>
-		<a href="algebra.html"><img src="mechanics.jpg" width="200px" height="250px" class="image"></a>
-		<a href="geometry.html"><img src="fluid.jpg" width="200px" height="250px" class="image"></a>
-		<a href="mensuration.html"><img src="thermodynamics.jpg" width="200px" height="250px" class="image"></a>
-		<a href="arithmetic.html"><img src="electricity.jpg" width="200px" height="250px" class="image"></a>
-		<a href="coordinate.html"><img src="wave.jpg" width="200px" height="250px" class="image"></a>
+		<a href="basic.html"><img src="measure.jpg" width="200px" height="250px" class="image"></a>
+		<a href="algebra.html"><img src="gases.png" width="200px" height="250px" class="image"></a>
+		<a href="geometry.html"><img src="solution.jpg" width="200px" height="250px" class="image"></a>
+		<a href="mensuration.html"><img src="mixture.jpg" width="200px" height="250px" class="image"></a>
+		<a href="arithmetic.html"><img src="acid.jpg" width="200px" height="250px" class="image"></a>
+		<a href="coordinate.html"><img src="kinetics.jpg" width="200px" height="250px" class="image"></a>
+		<a href="coordinate.html"><img src="atom.jpg" width="200px" height="250px" class="image"></a>
 	</div>
 	<div class="logo">
 		<a href="https://www.facebook.com/E-learning-867307250031088/" target="_blank"><img src="fblogo.jpeg" align="right"></a>
